--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"bcrypt": "^5.0.1",
 		"dotenv": "^16.0.0",
 		"express": "^4.17.3",
+		"handlebars": "^4.7.7",
 		"mysql2": "^2.3.3",
 		"sequelize": "^6.17.0"
 	}
